@@ -36,8 +36,7 @@ void prepare_commands(void);
 int equality_split(char *buffer, char **variable, char **value);
 int get_boolean(char *strg, int *bl);
 int is_animated_player(object *pl);
-void free_events(object *who);
-int start_animation(object *who, object *activator, char *file, char *options);
+int start_animation(object *who, object *activator, object *event, char *file, char *options);
 void animate(void);
 void initContextStack(void);
 void pushContext(CFPContext *context);
